fixes reposiveness and overflow 2

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   height: 100%;
   background-image: url('/images/bg.png');
   z-index: -1; /* Ensure it’s behind other content */
-  clip-path: ellipse(80% 100% at 50% 100%);
+  clip-path: ellipse(150% 100% at 50% 100%);
 }
 
 .page-title.arc-bottom::before {
@@ -23,7 +23,7 @@
   height: 100%;
   background-color: rgba(20, 72, 53, .85); /* Semi-transparent overlay */
   z-index: 1; /* Ensure it’s on top of the red background but behind other content */
-  clip-path: ellipse(80% 100% at 50% 100%);
+  clip-path: ellipse(150% 100% at 50% 100%);
 }
 
 .gradient-hover:hover {
@@ -98,7 +98,7 @@
   height: 100%;
   background-color: rgba(20, 72, 53, .4); /* Semi-transparent overlay */
   z-index: 1; /* Ensure it’s on top of the red background but behind other content */
-  clip-path: ellipse(40% 100% at 50% 100%);
+  clip-path: ellipse(80% 100% at 50% 100%);
 }
 
 @media screen and (max-width: 768px) {
